--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.2",
     "@kaliber/html-to-portable-text": "^3.0.2",
+    "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material-nextjs": "^5.15.11",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
