--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.20",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-date-pickers": "^7.7.0",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
