--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "^14.0.3",
     "next-sanity": "^5.5.11",
     "next-themes": "^0.2.1",
+    "public-ip": "^6.0.2",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.8.0",
     "react-dom": "^18.2.0",
