--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/portable-text-editor": "^3.37.2",
+    "@stripe/stripe-js": "^4.1.0",
     "@supabase/supabase-js": "^2.42.0",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.8",
@@ -67,6 +68,7 @@
     "resend": "^2.0.0",
     "sanity": "^3.19.0",
     "slate-history": "^0.100.0",
+    "stripe": "^16.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "type-fest": "^4.15.0",
