--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/portable-text-editor": "^3.37.2",
+    "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "@supabase/supabase-js": "^2.42.0",
     "@vercel/analytics": "^1.1.1",
