--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
+    "react-spinners": "^0.14.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "resend": "^2.0.0",
